# mullvadvpn-app

./: .travis.yml  appveyor.yml
android/: build.gradle
android/src/main/kotlin/net/mullvad/mullvadvpn/: AccountData.kt  AccountInput.kt  ConnectActionButton.kt  ConnectFragment.kt  ConnectionStatus.kt  HeaderBar.kt  LaunchFragment.kt  LoginFragment.kt  MainActivity.kt  MullvadDaemon.kt  MullvadIpcClient.kt  NotificationBanner.kt  SelectLocationFragment.kt  Settings.kt
android/src/main/kotlin/net/mullvad/mullvadvpn/model/: ConnectionState.kt  LoginState.kt  RelaySettings.kt
android/src/main/kotlin/net/mullvad/mullvadvpn/relaylist/: RelayList.kt
gui/src/main/: index.ts  tray-icon-controller.ts  window-controller.ts
gui/src/renderer/components/: AdvancedSettings.tsx  Support.tsx
mullvad-daemon/src/: lib.rs
mullvad-jni/: Cargo.toml
mullvad-jni/src/: from_java.rs  into_java.rs  lib.rs  tunnel_event_listener.rs
mullvad-paths/src/: cache.rs  lib.rs  settings.rs
mullvad-problem-report/src/: metadata.rs
mullvad-tests/src/: lib.rs
mullvad-types/src/: relay_constraints.rs  relay_list.rs  settings.rs
talpid-core/: Cargo.toml
talpid-core/src/: lib.rs
talpid-core/src/firewall/: mod.rs
talpid-core/src/tunnel/: mod.rs  openvpn.rs
talpid-core/src/tunnel/wireguard/: wireguard_go.rs
